GpMessages/72193455643000
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: miércoles, 19 de junio de 2024 19:31:18</msg><msg code="-2147467259" type="100">  File "C:\Users\juaco\OneDrive\Documentos\ArcGIS\Packages\DAG_1s2024_L_TRABAJO_1_PARTE_2_JBV_d59d9f\p30\dag_1s2024_l_trabajo_1_parte_2_jbv.gdb\DENS POB MANZ.py", line 31
    arcpy.management.CalculateField(fcIn6, nombre_campo, formula, field_type="DOUBLE", fcOut)
                                                                                            ^
SyntaxError: positional argument follows keyword argument
</msg><msg code="0" type="0">Failed script 3.1.- DENSIDAD POBLACIONAL POR MANZANA...</msg><msg code="-2147467259" type="100">Failed to execute (DENSIDADPOBMANZ).</msg><msg code="0" type="3">Failed at miércoles, 19 de junio de 2024 19:31:19 (Elapsed Time: 0.33 seconds)</msg></messages>